--- a/themes/icarus/layout/common/footer.ejs
+++ b/themes/icarus/layout/common/footer.ejs
@@ -10,7 +10,7 @@
                 <% } %>
                 </a>
                 <p class="is-size-7">
-                &copy; <%= date(new Date(), 'YYYY') %> <%= get_config('author') || get_config('title') %>&nbsp;
+                &copy; <%= date(new Date(), 'YYYY') %> wecteam&nbsp;
                 Powered by <a href="https://hexo.io/" target="_blank">Hexo</a> & <a
                         href="https://github.com/ppoffice/hexo-theme-icarus" target="_blank">Icarus</a>
                 <% if (has_config('plugins.busuanzi') ? get_config('plugins.busuanzi') : false) { %>
