--- a/themes/icarus/layout/common/footer.ejs
+++ b/themes/icarus/layout/common/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="container">
-        <div class="level">
+        <div class="level" style="justify-content: center">
             <div class="level-start has-text-centered-mobile">
                 <a class="footer-logo is-block has-mb-6" href="<%- url_for('/') %>">
                 <% if (has_config('logo.text') && get_config('logo.text')) { %>
