--- a/themes/icarus/layout/common/head.ejs
+++ b/themes/icarus/layout/common/head.ejs
@@ -28,7 +28,9 @@
 <% if (has_config('favicon')) { %>
 <link rel="icon" href="<%- url_for(get_config('favicon')) %>">
 <% } %>
-
+<link rel="stylesheet" href="//cdn.bootcss.com/gitalk/1.5.0/gitalk.min.css">
+<script src="//cdn.bootcss.com/gitalk/1.5.0/gitalk.min.js"></script>
+<script src="https://unpkg.com/blueimp-md5@2.12.0/js/md5.js"></script>
 <%- _css(cdn('bulma', '0.7.2', 'css/bulma.css')) %>
 <%- _css(iconcdn()) %>
 <!--<%- _css(fontcdn('Ubuntu:400,600|Source+Code+Pro')) %>-->
