--- a/themes/icarus/layout/common/head.ejs
+++ b/themes/icarus/layout/common/head.ejs
@@ -4,26 +4,7 @@
 <% } %>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <%- meta() %>
-<title><%= page_title() %></title>
-
-<% if (has_config('open_graph')) { %>
-    <%- open_graph({
-        twitter_id: get_config('open_graph.twitter_id'),
-        twitter_site: get_config('open_graph.twitter_site'),
-        google_plus: get_config('open_graph.google_plus'),
-        fb_admins: get_config('open_graph.fb_admins'),
-        fb_app_id: get_config('open_graph.fb_app_id'),
-        image: get_og_image(page)
-    }) %>
-<% } %>
-
-<% if (has_config('canonical_url')) { %>
-<link rel="canonical" href="<%- get_config('canonical_url') %>" />
-<% } %>
-
-<% if (has_config('rss')) { %>
-<link rel="alternative" href="<%- get_config('rss') %>" title="<%= get_config('title') %>" type="application/atom+xml">
-<% } %>
+<title>WecTeam</title>
 
 <% if (has_config('favicon')) { %>
 <link rel="icon" href="<%- url_for(get_config('favicon')) %>">
