--- a/themes/icarus/layout/common/footer.ejs
+++ b/themes/icarus/layout/common/footer.ejs
@@ -42,4 +42,20 @@
             </div>
         </div>
     </div>
+    <div style="margin:30px auto 0;text-align: center;">
+            <% if (theme.busuanzi && theme.busuanzi.enable){ %>
+                <!-- 不蒜子统计 -->
+                <span id="busuanzi_container_site_pv">
+                        本站总访问量<span id="busuanzi_value_site_pv"></span>次
+                </span>
+                <span class="post-meta-divider">|</span>
+                <span id="busuanzi_container_site_uv" style='display:none'>
+                        本站访客数<span id="busuanzi_value_site_uv"></span>人
+                </span>
+                <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+            <% } %>
+
+    </div>
+
+    
 </footer>
